fixing layout bug on firefox, adding Analytics

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -18,7 +18,7 @@ body {
   }
 
   div.social-icons {
-    width: 260px;
+    width: 261px;
 
     position: absolute;
     top: 0;
